# flo-flo

./: .gitignore  README.md  makefile  package-lock.json  ragAdr.md
.github/.agents/: mentor-defensive-coder.agent.md
.github/workflows/: agent-tests.ci.yml  backend-tests.ci.yml  frontend-tests.ci.yml  integration-tests.manual.yml  python-tests.ci.yml
agents/: config.py  generator_agent.py  orchestrator.py  pyproject.toml  scraper_agent.py
agents/src/agents/: config.py  generator_agent.py  orchestrator.py  scraper_agent.py
agents/src/agents.egg-info/: PKG-INFO  SOURCES.txt
agents/src/agents/tools/: __init__.py  database.py  generator_quality.py  scraper.py
agents/tests/: __init__.py  test_generator_agent.py  test_scraper_agent.py
agents/tests/test_tools/: test_generator_agent.py  test_scraper_agent.py  test_tool_database.py  test_tool_generator_quality.py  test_tool_scraper.py
agents/tools/: database.py  scraper.py
backend/: .env.example  alembic.ini  floridaman.db  pyproject.toml  pytest.ini  requirements.txt  seed_data.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  database.py  repositories.py
backend/app/models/: __init__.py  generation_audit.py  (+2 more)
backend/flo_flo_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py
frontend/: eslint.config.mjs  jest.config.js  next.config.mjs  package-lock.json  package.json  requirements.txt  tsconfig.json
scripts/: canary_admin_job.sh
tests/: __init__.py  test_api_integration.py  test_e2e_headline_flow.py
(+30 files in other folders)
