[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"autogen-agentchat>=0.4.0",
	"autogen-ext[openai]>=0.4.0",
	"beautifulsoup4==4.12.3",
	"pydantic-settings==2.6.1",
	"requests==2.31.0",
	"sqlalchemy==2.0.36",
]
[project.optional-dependencies]
dev = ["ruff==0.15.11"]
[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*"]